[package]
name = "rust_zeromq_box"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zmq_subscriber"
path = "src/zmq_subscriber.rs"

[[bin]]
name = "monster_publisher"
path = "src/bin/monster_publisher.rs"

[[bin]]
name = "message_broker"
path = "src/bin/broker_example/message_broker.rs"

[[bin]]
name = "message_client"
path = "src/bin/broker_example/message_client.rs"

[[bin]]
name = "message_server"
path = "src/bin/broker_example/message_server.rs"


[dependencies]
zeromq = "0.4"
tokio = { version = "1.36.0", features = ["full"] }
flatbuffers = "24.3.25"
bytes = "1.5.0"

[build-dependencies]
flatc-rust = "0.2.0"
protoc-rust = "2.28.0"
